fix mobile project preview color scrolling bug on safari also

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -111,6 +111,10 @@ a {
 a.project-preview {
   text-decoration: none; }
 
+html {
+  width: 100%;
+  overflow-x: hidden; }
+
 body {
   width: 100%;
   overflow-x: hidden; }
