--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,3 +1,8 @@
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   width: 100%;
   overflow-x: hidden;
